configuration: google calendar integration

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -71,6 +71,10 @@ device_tracker: !include device_tracker.yaml
 ifttt:
   key: !secret ifttt_key
 
+google:
+  client_id: !secret gcal_client_id
+  client_secret: !secret gcal_client_secret
+
 notify: !include_dir_merge_list notify
 
 scene: !include scene.yaml
