--- a/switches/mock_extra.yaml
+++ b/switches/mock_extra.yaml
@@ -11,13 +11,13 @@
   platform: mqtt
   retain: true
 - name: horstmann_unknown_type0003_id0002_switch_36_0_2
-  command_topic: ha/main/hotwater/command
+  command_topic: ha/main/boiler/command
   payload_off: 'OFF'
   payload_on: 'ON'
   platform: mqtt
   retain: true
 - name: horstmann_unknown_type0003_id0002_switch_36_0_3
-  command_topic: ha/main/all/command
+  command_topic: ha/main/hotwater/command
   payload_off: 'OFF'
   payload_on: 'ON'
   platform: mqtt
