--- a/automation/calendar.yaml
+++ b/automation/calendar.yaml
@@ -1,4 +1,4 @@
-- alias: "Calendar Service Trigger"
+- alias: "Calendar Service"
   trigger:
     - platform: state
       entity_id: calendar.service
@@ -11,10 +11,11 @@
         topic: 'ha/calendar/service'
         payload: '{"service":"{{trigger.to_state.attributes.message.split()[1]}}","data":"{{trigger.to_state.attributes.message.split()[2]}}"}'
 
-- alias: "Scene"
+- alias: "Calendar Scene"
   trigger:
     - platform: state
       entity_id: calendar.scene
+      to: "on"
   action:
     - service_template: input_select.select_option
       data_template:
@@ -34,10 +35,11 @@
         topic: 'ha/calendar/scene'
         payload: '{{trigger.to_state.attributes.message}}'
 
-- alias: "Climate"
+- alias: "Calendar Climate"
   trigger:
     - platform: state
       entity_id: calendar.climate
+      to: "on"
   action:
     - service_template: climate.set_temperature
       data_template:
