--- a/automation/heating-on-demand.yaml
+++ b/automation/heating-on-demand.yaml
@@ -39,8 +39,8 @@
       entity_id: group.annex_heating_demand
       to: 'on'
   action:
-    #- service: switch.turn_on
-    #  entity_id: switch.horstmann_unknown_type0003_id0002_switch_36_0
+    - service: switch.turn_on
+      entity_id: switch.horstmann_asrzw_thermostat_receiver_switch_56_0
     - service: climate.set_temperature
       data:
         entity_id: climate.horstmann_scsc17_thermostat_heating_1_50_1
@@ -55,8 +55,8 @@
       entity_id: group.annex_heating_demand
       to: 'off'
   action:
-    #- service: switch.turn_off
-    #  entity_id: switch.horstmann_unknown_type0003_id0002_switch_36_0
+    - service: switch.turn_off
+      entity_id: switch.horstmann_asrzw_thermostat_receiver_switch_56_0
     - service: climate.set_temperature
       data:
         entity_id: climate.horstmann_scsc17_thermostat_heating_1_50_1
