--- a/customize.yaml
+++ b/customize.yaml
@@ -119,9 +119,7 @@ switch.horstmann_unknown_type0003_id0002_switch_36_0_2:
   friendly_name: Main Boiler Switch
 switch.horstmann_unknown_type0003_id0002_switch_36_0_3:
   friendly_name: Main Hot Water Switch
-climate.horstmann_unknown_type0003_id0001_mode_51_0:
-  friendly_name: Annex Heating Mode
-switch.horstmann_unknown_type0003_id0001_switch_51_0:
+switch.horstmann_asrzw_thermostat_receiver_switch_56_0:
   friendly_name: Annex Heating Switch
 
 media_player.txnr636_0009b09961fb:
@@ -137,7 +135,7 @@ light.hall_east_level_24:
 light.library_level_25:
   friendly_name: Library Valve
 light.bedroom_mark_level_29:
-  friendly_name: Mark's Bedroom Valve
+  friendly_name: "Mark's Bedroom Valve"
 light.lounge_east_level_30:
   friendly_name: Lounge East Valve
 light.ballroom_east_level_33:
