--- a/switches/rfxtrx_switches.yaml
+++ b/switches/rfxtrx_switches.yaml
@@ -13,3 +13,11 @@
       name: RFX8100
     0a14000cf40fa910020040:
       name: RFX9100
+    0a140083f3cf3510020070:
+      name: Dimmer Remote Mood 0
+    0a140084f3cf3510030070:
+      name: Dimmer Remote Mood 1
+    0a140087f3cf3510040070:
+      name: Dimmer Remote Mood 2
+    0a140086f3cf3510050070:
+      name: Dimmer Remote Mood 3
