--- a/media_players/media-system.yaml
+++ b/media_players/media-system.yaml
@@ -1,26 +1,26 @@
 - name: Study
   platform: kodi
-  host: http://study
+  host: study
   port: 80
 
 - name: Lounge
   platform: kodi
-  host: http://lounge
+  host: lounge
   port: 80
 
 - name: Kitchen
   platform: kodi
-  host: http://kitchen
+  host: kitchen
   port: 8080
 
 - name: Ballroom
   platform: kodi
-  host: http://ballroom
+  host: ballroom
   port: 80
 
 - name: Library
   platform: kodi
-  host: http://library
+  host: library
   port: 80
 
 - name: Ballroom Amplifier
