Table Tennis Mode!
Alexa: "activate table tennis mode"

--- a/customize.yaml
+++ b/customize.yaml
@@ -334,3 +334,6 @@ script.hue_bedroom_jerome_thermostat:
 script.hue_guest_room_thermostat:
   friendly_name: "Guest Room Thermostat"
 
+script.table_tennis:
+  friendly_name: "Table Tennis Mode"
+
