emulated_hue scenes. Map scripts to input_select.
Nasty hack. Creates a script for each input_select value.
Alexa might not support so many devices.

"Alexa Turn off the Kitchen"
"Alexa Set Kitchen Mood Bright"

--- a/input_select/scene_inputs.yaml
+++ b/input_select/scene_inputs.yaml
@@ -46,7 +46,7 @@ ballroom_select:
   icon: mdi:projector
 
 marks_bedroom_select:
-  name: Mark's Bedroom Mood
+  name: "Mark's Bedroom Mood"
   options:
     - 'Off'
     - 'Sleep'
