--- a/customize.yaml
+++ b/customize.yaml
@@ -337,3 +337,58 @@ script.hue_guest_room_thermostat:
 script.table_tennis:
   friendly_name: "Table Tennis Mode"
 
+script.hue_everything_off:
+  friendly_name: "Everything Off"
+
+script.hue_study_off:
+  friendly_name: "Study"
+script.hue_study_work:
+  friendly_name: "Study Mood Work"
+script.hue_study_relax:
+  friendly_name: "Study Mood Relax"
+
+script.hue_kitchen_off:
+  friendly_name: "Kitchen"
+script.hue_kitchen_cosy:
+  friendly_name: "Kitchen Mood Cosy"
+script.hue_kitchen_bright:
+  friendly_name: "Kitchen Mood Bright"
+
+script.hue_lounge_off:
+  friendly_name: "Lounge"
+script.hue_lounge_cosy:
+  friendly_name: "Lounge Mood Cosy"
+script.hue_lounge_movie:
+  friendly_name: "Lounge Mood Movie"
+script.hue_lounge_bright:
+  friendly_name: "Lounge Mood Bright"
+
+script.hue_library_off:
+  friendly_name: "Library"
+script.hue_library_chat:
+  friendly_name: "Library Mood Chat"
+script.hue_library_read:
+  friendly_name: "Library Mood Read"
+
+script.hue_ballroom_off:
+  friendly_name: "Ballroom"
+script.hue_ballroom_party:
+  friendly_name: "Ballroom Mood Party"
+script.hue_ballroom_movie:
+  friendly_name: "Ballroom Mood Movie"
+script.hue_ballroom_bright:
+  friendly_name: "Ballroom Mood Bright"
+
+script.hue_marks_bedroom_off:
+  friendly_name: "Mark's Bedroom"
+script.hue_marks_bedroom_sleep:
+  friendly_name: "Mark's Bedroom Mood Sleep"
+script.hue_marks_bedroom_play:
+  friendly_name: "Mark's Bedroom Mood Play"
+
+script.hue_guest_room_off:
+  friendly_name: "Guest Room"
+script.hue_guest_room_sleep:
+  friendly_name: "Guest Room Mood Sleep"
+script.hue_guest_room_cosy:
+  friendly_name: "Guest Room Mood Cosy"
