--- a/configuration.yaml
+++ b/configuration.yaml
@@ -2,8 +2,8 @@ homeassistant:
   # Name of the location where Home Assistant is running
   name: WB
   # Location required to calculate the time the sun rises and sets
-  latitude: 52.23492
-  longitude: -0.04496
+  latitude: !secret ha_latitude
+  longitude: !secret ha_longitude
   elevation: 55
   unit_system: metric
   # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
