--- a/scripts/tabletennis.yaml
+++ b/scripts/tabletennis.yaml
@@ -6,8 +6,8 @@ table_tennis:
   - service: media_player.play_media
     data:
       entity_id: media_player.ballroom
-      media_content_id: "smb://HASTUR/mediasys/music/library/Daft Punk/Discovery/Daft Punk - Veridis Quo.mp3"
-      media_content_type: MUSIC
+      media_content_id: "smb://HASTUR/mediasys/music/meta/playlists/tabletennis.m3u"
+      media_content_type: PLAYLIST
   - service: media_player.turn_on
     data:
       entity_id: media_player.ballroom_amplifier
