--- a/configuration.yaml
+++ b/configuration.yaml
@@ -79,6 +79,7 @@ google:
 emulated_hue: !include emulated_hue.yaml
 
 notify: !include_dir_merge_list notify
+tts: !include tts.yaml
 
 scene: !include scene.yaml
 automation: !include_dir_merge_list automation
