--- a/switches/mock_switches.yaml
+++ b/switches/mock_switches.yaml
@@ -11,7 +11,7 @@
   platform: mqtt
   retain: true
 - command_topic: ha/bedroom-mark/demand/command
-  name: Mark's Bedroom Demand
+  name: "Mark's Bedroom Demand"
   payload_off: 'OFF'
   payload_on: 'ON'
   platform: mqtt
