--- a/configuration.yaml
+++ b/configuration.yaml
@@ -80,7 +80,7 @@ emulated_hue: !include emulated_hue.yaml
 notify: !include_dir_merge_list notify
 tts: !include tts.yaml
 
-scene: !include scene.yaml
+scene: !include_dir_merge_list scenes
 automation: !include_dir_merge_list automation
 
 group: !include groups.yaml
