--- a/thermostats/mock_thermostats.yaml
+++ b/thermostats/mock_thermostats.yaml
@@ -71,3 +71,10 @@
   max_temp: 25
   min_temp: 5
   target_sensor: sensor.bedroom_jerome_temperature_44_1
+
+- name: bedroom_ros_comfort_setpoint_XX_1
+  platform: generic_thermostat
+  heater: switch.ross_bedroom_demand
+  max_temp: 25
+  min_temp: 5
+  target_sensor: sensor.bedroom_ros_temperature_XX_1
