Add Ros's room. FIXME: XX for StellaZ zwave ID

--- a/automation/calendar.yaml
+++ b/automation/calendar.yaml
@@ -24,6 +24,8 @@
           {%   set u = "marks_bedroom" %}
           {% elif "jerome" in l %}
           {%   set u = "bedroom_jerome" %}
+          {% elif "ros" in l %}
+          {%   set u = "bedroom_ros" %}
           {% endif %}
           input_select.{{u}}_select
         option: >
@@ -47,6 +49,8 @@
           {%   set u = "marks_bedroom" %}
           {% elif "jerome" in l %}
           {%   set u = "bedroom_jerome" %}
+          {% elif "ros" in l %}
+          {%   set u = "bedroom_ros" %}
           {% endif %}
           group.{{u}}_thermostats
         temperature: >
