--- a/input_select/scene_inputs.yaml
+++ b/input_select/scene_inputs.yaml
@@ -71,3 +71,12 @@ bedroom_jerome_select:
     - 'Cosy'
   initial: 'Off'
   icon: mdi:account
+
+bedroom_ros_select:
+  name: "Ros's Bedroom Mood"
+  options:
+    - 'Off'
+    - 'Sleep'
+    - 'Cosy'
+  initial: 'Off'
+  icon: mdi:account
