--- a/scripts/hue-thermostat.yaml
+++ b/scripts/hue-thermostat.yaml
@@ -73,3 +73,9 @@ hue_guest_room_thermostat:
         temperature: "{{ requested_level }}"
         entity_id: climate.danfoss_z_thermostat_014g0013_heating_1_52_1
 
+hue_bedroom_ros_thermostat:
+  sequence:
+    - service: climate.set_temperature
+      data_template:
+        temperature: "{{ requested_level }}"
+        entity_id: climate.bedroom_ros_thermostat_XX_1
