--- a/default_view.yaml
+++ b/default_view.yaml
@@ -2,5 +2,5 @@ name: WB
 view: true
 entities:
 - group.people
-- group.barnacles
-- group.quick_scenes
+- group.room_scenes
+- group.bedroom_scenes
